@@ -392,7 +392,9 @@
     }
    </pre>
    <p>Try it yourself!  More examples can be found in 3.1.x code, in
-      <code>include/ext/*_filebuf.h</code>.
+      <code>include/ext/*_filebuf.h</code>, and on
+      <a href="http://www.informatik.uni-konstanz.de/~kuehl/c++/iostream/">Dietmar
+      K&uuml;hl's IOStreams page</a>.
    </p>
 
 <hr />
@@ -695,6 +697,7 @@
 
 <hr />
 <h2><a name="11">Using FILE*s and file descriptors with IOStreams</a></h2>
+   <!-- referenced by ext/howto.html#2, update link if numbering changes -->
    <p>The v2 library included non-standard extensions to construct
       <code>std::filebuf</code>s from C stdio types such as
       <code>FILE*</code>s and POSIX file descriptors.
